# cpp-template

./: .gitignore  CMakeLists.txt
cmake/: SourcesAndHeaders.cmake  StandardSettings.cmake  Utils.cmake
include/project/: tmp.hpp
test/: CMakeLists.txt
